ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
spec:
  rules:
    - host: your-hostname.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nodejs-app-service
                port:
                  number: 80
